--- a/promises-map-reduce/promise-map-reduce.html
+++ b/promises-map-reduce/promise-map-reduce.html
@@ -25,6 +25,7 @@ pre	{
 <section>
 	<h1>Promesses : map().reduce()</h1>
 	<p>Cf. HTML5 Rocks : <a href="http://www.html5rocks.com/fr/tutorials/es6/promises">JavaScript Promises: There and back again</a></p>
+	<p><a href="https://github.com/interfacteur/js-segments/tree/master/promises-map-reduce">Code sur Github</a></p>
 	<pre></pre>
 </section>
 <script src="-media/jquery-2.1.1.min.js"></script>
@@ -35,8 +36,6 @@ pre	{
 
 	if (! Modernizr.promises)
 		return $("body").html("<p>Le support JavaScript des promesses est requis</p>");
-
-// /
 
 	var $pre = $("pre"),
 		ord,
