--- a/promises-map-reduce/promise-map-reduce-chaptering.html
+++ b/promises-map-reduce/promise-map-reduce-chaptering.html
@@ -33,6 +33,7 @@ img	{
 <section>
 	<h1>Promesses : map().reduce() et chapitrage</h1>
 	<p>Cf. HTML5 Rocks : <a href="http://www.html5rocks.com/fr/tutorials/es6/promises">JavaScript Promises: There and back again</a></p>
+	<p><a href="https://github.com/interfacteur/js-segments/tree/master/promises-map-reduce">Code sur Github</a></p>
 	<p></p>
 	<h2>Version avec code complet</h2>
 	<pre></pre>
