--- a/promises-map-reduce/promise-map-reduce-chaptering.html
+++ b/promises-map-reduce/promise-map-reduce-chaptering.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <title>Promesses : map().reduce() et chapitrage</title>
 <meta name="author" content="Gaëtan Langhade, interfacteur">
-<link rel="stylesheet" href="-media/regularize.css">
-<link rel="stylesheet" href="-media/loader.css">
+<link rel="stylesheet" href="-media-promise/regularize.css">
+<link rel="stylesheet" href="-media-promise/loader.css">
 <style>
 section	{
 	line-height: 1.6;
@@ -40,7 +40,7 @@ img	{
 	<h2>Version avec code concis</h2>
 	<pre></pre>
 </section>
-<script src="-media/jquery-2.1.1.min.js"></script>
+<script src="-media-promise/jquery-2.1.1.min.js"></script>
 <script>
 ;(function () {
 	"use strict";
