--- a/promises-map-reduce/promise-map-reduce.html
+++ b/promises-map-reduce/promise-map-reduce.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <title>Promesses : map().reduce()</title>
 <meta name="author" content="Gaëtan Langhade, interfacteur">
-<link rel="stylesheet" href="-media/regularize.css">
-<link rel="stylesheet" href="-media/loader.css">
+<link rel="stylesheet" href="-media-promise/regularize.css">
+<link rel="stylesheet" href="-media-promise/loader.css">
 <style>
 section	{
 	line-height: 1.6;
@@ -28,8 +28,8 @@ pre	{
 	<p><a href="https://github.com/interfacteur/js-segments/tree/master/promises-map-reduce">Code sur Github</a></p>
 	<pre></pre>
 </section>
-<script src="-media/jquery-2.1.1.min.js"></script>
-<script src="-media/modernizr-custom.js"></script>
+<script src="-media-promise/jquery-2.1.1.min.js"></script>
+<script src="-media-promise/modernizr-custom.js"></script>
 <script>
 ;(function () {
 	"use strict";
