--- a/promises-map-reduce/promise-map-reduce-chaptering.html
+++ b/promises-map-reduce/promise-map-reduce-chaptering.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Promesses : map().reduce() et chapitrage</title>
+<title>Promesses : map().reduce() et chapitrage \ Bambous ~ exemples / Equatorium</title>
 <meta name="author" content="Gaëtan Langhade, interfacteur">
 <link rel="stylesheet" href="-media-promise/regularize.css">
 <link rel="stylesheet" href="-media-promise/loader.css">
