--- a/promises-map-reduce/promise-map-reduce.html
+++ b/promises-map-reduce/promise-map-reduce.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Promesses : map().reduce()</title>
+<title>Promesses : map().reduce() \ Bambous ~ exemples / Equatorium</title>
 <meta name="author" content="Gaëtan Langhade, interfacteur">
 <link rel="stylesheet" href="-media-promise/regularize.css">
 <link rel="stylesheet" href="-media-promise/loader.css">
