--- a/promises-map-reduce/promise-map-reduce.html
+++ b/promises-map-reduce/promise-map-reduce.html
@@ -24,8 +24,9 @@ pre	{
 <body>
 <section>
 	<h1>Promesses : map().reduce()</h1>
-	<p>Cf. HTML5 Rocks : <a href="http://www.html5rocks.com/fr/tutorials/es6/promises">JavaScript Promises: There and back again</a></p>
-	<p><a href="https://github.com/interfacteur/js-segments/tree/master/promises-map-reduce">Code sur Github</a></p>
+	<p>Cf. HTML5 Rocks : <a href="http://www.html5rocks.com/fr/tutorials/es6/promises">JavaScript Promises: There and back again</a><br>
+	<a href="https://github.com/interfacteur/js-segments/tree/master/promises-map-reduce">Code sur Github</a></p>
+	<p></p>
 	<pre></pre>
 </section>
 <script src="-media-promise/jquery-2.1.1.min.js"></script>
