--- a/promises-recursion/promises-recursion-INDEX.html
+++ b/promises-recursion/promises-recursion-INDEX.html
@@ -42,10 +42,13 @@ dd	{
 	~
 	<a href="https://github.com/interfacteur/js-segments/tree/master/promises-recursion">Codes sur Github</a>
 </div>
-<h2>Exemples</h2>
+<h2>Base</h2>
 <dl>
 	<dt>promises-recursion.0.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.0.html">&lt;code&gt;</a></small></dt>
 	<dd><a href="promises-recursion.0.html">"ordonnancer un groupe de promesses simultanées" : <span lang="en">structure</span></a></dd>
+</dl>
+<h2>Exemples avec cinq nombres "2", "3", "4", "6" et "8" et leurs facteurs</h2>
+<dl>
 	<dt>promises-recursion.1.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.1.html">&lt;code&gt;</a></small></dt>
 	<dd><a href="promises-recursion.1.html">"ordonnancer un groupe de promesses simultanées (1)" : <span lang="en">full promises example</span></a></dd>
 	<dt>promises-recursion.2.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.2.html">&lt;code&gt;</a></small></dt>
@@ -53,10 +56,15 @@ dd	{
 	<dt>promises-recursion.3.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.3.html">&lt;code&gt;</a></small></dt>
 	<dd><a href="promises-recursion.3.html">"ordonnancer un groupe de promesses simultanées (3)" : <span lang="en">current mode example with 2 functions</span></a></dd>
 </dl>
-<h2>Tests en mode courant</h2>
+<h2>Exemples avec une "généalogie"</h2>
 <dl>
 	<dt>promises-recursion.test-easy.1.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-easy.1.html">&lt;code&gt;</a></small></dt>
-	<dd><a href="promises-recursion.test-easy.1.html">"ordonnancer une généalogie dans un groupe de promesses simultanées (1)" : <span lang="en">test of multiple dependancies</span></a></dd>
+	<dd><a href="promises-recursion.test-easy.1.html">"ordonnancer une 'généalogie' dans un groupe de promesses simultanées (1)" : <span lang="en">test of multiple dependancies</span></a></dd>
+	<dt>promises-recursion.test-full.1.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-full.1.html">&lt;code&gt;</a></small></dt>
+	<dd><a href="promises-recursion.test-full.1.html">"ordonnancer une 'généalogie' dans un groupe de promesses simultanées (2)" : <span lang="en">test of multiple dependancies (full promises)</span></a></dd>
+</dl>
+<h2>Exemples avec 36 nombres (8 premiers) et leurs facteurs téléchargés, mode courant</h2>
+<dl>
 	<dt>promises-recursion.test-easy.2.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-easy.2.html">&lt;code&gt;</a></small></dt>
 	<dd><a href="promises-recursion.test-easy.2.html">"ordonnancer un flux de téléchargements simultanés (1)" : <span lang="en">test of factors downloaded, mixed list, with meta info</span></a></dd>
 	<dt>promises-recursion.test-easy.2.only-code.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-easy.2.only-code.html">&lt;code&gt;</a></small></dt>
@@ -66,10 +74,9 @@ dd	{
 	<dt>promises-recursion.test-easy.3.only-code.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-easy.3.only-code.html">&lt;code&gt;</a></small></dt>
 	<dd><a href="promises-recursion.test-easy.3.only-code.html">"ordonnancer un flux de téléchargements simultanés (4)" : <span lang="en">test of factors downloaded, reverse list</span></a></dd>
 </dl>
-<h2>Tests full promises</h2>
+<h2>Exemples avec 36 nombres (8 premiers) et leurs facteurs téléchargés, mode full promises</h2>
 <dl>
-	<dt>promises-recursion.test-full.1.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-full.1.html">&lt;code&gt;</a></small></dt>
-	<dd><a href="promises-recursion.test-full.1.html">"ordonnancer une généalogie dans un groupe de promesses simultanées (2)" : <span lang="en">test of multiple dependancies (full promises)</span></a></dd>
+<dl>
 	<dt>promises-recursion.test-full.2.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-full.2.html">&lt;code&gt;</a></small></dt>
 	<dd><a href="promises-recursion.test-full.2.html">"ordonnancer un flux de téléchargements simultanés (5)" : <span lang="en">test of factors downloaded, mixed list, with meta info (full promises)</span></a></dd>
 	<dt>promises-recursion.test-full.2.only-code.html <small><a href="https://github.com/interfacteur/js-segments/blob/master/promises-recursion/promises-recursion.test-full.2.only-code.html">&lt;code&gt;</a></small></dt>
@@ -81,3 +88,4 @@ dd	{
 </dl>
 </body>
 </html>
+
