--- a/promises-recursion/promises-recursion.test-full.1.html
+++ b/promises-recursion/promises-recursion.test-full.1.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Promesses et récursivité : ordonnancer une généalogie dans un groupe de promesses simultanées (2) \ Bambous ~ exemples / Equatorium</title>
+<title>Promesses et récursivité : ordonnancer une "généalogie" dans un groupe de promesses simultanées (2) \ Bambous ~ exemples / Equatorium</title>
 <meta name="author" content="Gaëtan Langhade, interfacteur">
 <link rel="stylesheet" href="-media/regularize.css">
 <link rel="stylesheet" href="-media/results.css">
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>Promesses et récursivité : ordonnancer une généalogie dans un groupe de promesses simultanées (2)</h1>
+<h1>Promesses et récursivité : ordonnancer une "généalogie" dans un groupe de promesses simultanées (2)</h1>
 <div>
 	Dépendances : données inversées, solution full promises
 	<div>
