--- a/promises-recursion/promises-recursion.1.html
+++ b/promises-recursion/promises-recursion.1.html
@@ -38,7 +38,9 @@ div a	{
 	<a href="https://github.com/interfacteur/js-segments/tree/master/promises-recursion">codes sur Github</a>
 </div>
 <p>Les instructions par récursivité sont encore des promesses de base dans ce développement.</p>
-<pre></pre>
+<p><code>Données initiales : datas.proxy = [[3, []], [4, [2]], [8, [4]], [6, [2, 3]], [2, []]]</code></p>
+<pre>Données traitées
+et inscrites dans datas.net : </pre>
 <script src="-media/jquery-2.1.1.min.js"></script>
 <script src="-media/modernizr-custom.js"></script>
 <script>
@@ -50,7 +52,7 @@ div a	{
 
 	var datas = {
 			brut: [[2, []], [3, []], [4, [2]], [6, [2, 3]], [8, [4]]],
-			proxy: [[3, []], [4, [2]], [8, [2]], [6, [2, 3]], [2, []]], //sort(function () { return Math.random() - .5; })
+			proxy: [[3, []], [4, [2]], [8, [4]], [6, [2, 3]], [2, []]], //sort(function () { return Math.random() - .5; })
 			net: {
 				2: false,
 				3: false,
@@ -86,7 +88,9 @@ div a	{
 									}
 								}
 								if (condition == true) {
-									datas.net[value] = factors;
+									datas.net[value] = [];
+									for (var i in factors)
+										datas.net[value].push(factors[i], datas.net[factors[i]]);
 									datas.purge.push(ind);
 								}
 								resolve(); //tenir la promesse de base
