--- a/promises-support-alt/alternative.html
+++ b/promises-support-alt/alternative.html
@@ -11,6 +11,9 @@
 <script src="-media/jquery-2.1.1.min.js"></script>
 <script id="plug">
 "use strict";
+
+// if (! Modernizr.promises)
+
 (	typeof Promise === "undefined"
 	||
 	Promise.toString().indexOf("[native code]") === -1
