--- a/divers/msie.classique.html
+++ b/divers/msie.classique.html
@@ -20,18 +20,17 @@ attention, au validateur : Bad value X-UA-Compatible for attribute http-equiv on
 <!--[if lte IE 9]> <meta http-equiv="X-UA-Compatible" content="IE=Edge"> <![endif]-->
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9;chrome=1">
 
-<title>Titre de la page</title>
+<title>Mode IE9</title>
 </head>
 
 <body>
-<h1>Parc naturel des expressions régulières</h1>
-<p>if (ie > 9) ie = 9</p>
-<p>
+<h1>if (ie > 9) ie = 9</h1>
+<pre>
 pour un développement classique, sans les apports de HTML5,
 faire de MSIE 9 le mode de rendu maximum (*)
 de façon à pouvoir "jouer" encore avec les commentaires conditionnels en HTML et en JavaScript
-<br>
-(*) précisément : faire sur MSIE de la version 9 le mode de rendu max</p>
+
+(*) précisément : faire sur MSIE de la version 9 le mode de rendu max</pre>
 <h2>En HTML</h2>
 <!--[if IE ]><ins>pour IE seulement</ins><![endif]-->
 <!--[if !IE]><!--><del>pour IE seulement</del><!--<![endif]-->
