--- a/divers/objectHTMLTrad.html
+++ b/divers/objectHTMLTrad.html
@@ -80,6 +80,7 @@ dd:last-child > span {
 <body>
 <section>
 	<h1>Interprétation HTML d'un objet js littéral simple</h1>
+	<em>merci à William</em>
 	<div></div>
 	<h2>Côté JavaScript</h2>
 	<pre>
