--- a/divers/objectToHTMLdl.html
+++ b/divers/objectToHTMLdl.html
@@ -84,7 +84,8 @@ dd:last-child > span {
 	<div></div>
 	<h2>Côté JavaScript</h2>
 	<pre>
-	function objectToDl(o) {
+	function objectToDl(o)
+	{
 		let objectKeys = Object.keys(o);
 		return '&lt;dl&gt;'
 			+ objectKeys.map(key =&gt; {
